<resources>
    <string name="facebook_app_id">648547579152007</string>
    <string name="fb_login_protocol_scheme">fb648547579152007</string>
    <string name="app_name">Food Delivery</string>
    <string name="splash_description">VietNam\'s Faster Growing \nFood Delivery Platform</string>
    <string name="welcome_to">Welcome to</string>
    <string name="title_login">Login to your account</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="txt_continue_social_accounts">Continue Social Accounts</string>
    <string name="txt_new_acc">Don\'t have an account ? CREATE NOW</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_clear_all">Clear All</string>
    <string name="txt_apply">Apply</string>
    <string name="txt_search_restaurant">Search Restaurant / Dish</string>
    <string name="title_cart">Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="txt_order_now">Order Now</string>
    <string name="set_delivery_location">Set Delivery Location</string>
    <string name="txt_my_location">My Location</string>
    <string name="txt_saved_address">Saved Address</string>
    <string name="txt_work">Work</string>
    <string name="txt_other">Other</string>
    <string name="txt_current_location">Current Locaiton</string>
    <string name="txt_enable_location_service">Enable Location Service</string>
    <string name="txt_search_arena">Search for arena, street name ...</string>
    <string name="txt_set_delivery_location">Set Delivery Location</string>
    <string name="txt_location">Location</string>
    <string name="txt_enter_your_location">Enter your location</string>
    <string name="txt_enter_your_house_number">Enter your house number</string>
    <string name="txt_hose_number">House number</string>
    <string name="txt_landmark">Landmark</string>
    <string name="txt_enter_your_landmark">Enter your Landmark</string>
    <string name="save_location">Save Location</string>
    <string name="txt_save_as">Save as</string>
    <string name="title_office">Office</string>
    <string name="title_more">More</string>
    <string name="txt_payment_method">Payment Method</string>
    <string name="txt_tip_use_card">Tip : Use Card to enjoy faster checkouts.</string>
    <string name="txt_credit_debit_card">Credit/Debit Card</string>
    <string name="txt_cvv">CVV</string>
    <string name="make_payment">Make Payment</string>
    <string name="txt_add_new_card">Add New Card</string>
    <string name="txt_top_restaurant_near_you">Top restaurants near you</string>
    <string name="txt_top_favorites">Top Favorites Food</string>
    <string name="txt_add">Add</string>
    <string name="txt_title_search_result">Result : %d</string>
    <string name="txt_card_number">Card Number</string>
    <string name="txt_enter_card_number">Enter your card number</string>
    <string name="txt_date_valid">Date Valid</string>
    <string name="txt_card_info">Card Info</string>
    <string name="txt_card_name">Card Name</string>
    <string name="txt_enter_card_name">Enter your card name</string>
    <string name="txt_invalid">Invalid</string>
    <string name="txt_cvv_invalid">CVV Invalid</string>
    <string name="txt_change_active_success">Change Active Success</string>
    <string name="txt_not_found">Not Found</string>
</resources>
