<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.fooddelivery.ui.fragment.set_location.SetLocationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp">

        <!--        <ImageView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:scaleType="fitXY"-->
        <!--            android:src="@drawable/image_map"-->
        <!--            app:layout_constraintBottom_toTopOf="@id/gl_hor_30"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/gl_hor_30"
            app:layout_constraintTop_toTopOf="parent"
            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hor_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/title_set_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_set_delivery_location"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_hor_30" />

        <TextView
            android:id="@+id/title_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_location"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_set_location" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableRight="@drawable/ic_blue_location_searching_24"
            android:drawablePadding="@dimen/_5sdp"
            android:focusable="false"
            android:hint="@string/txt_enter_your_location"
            android:paddingBottom="@dimen/_18sdp"
            android:textCursorDrawable="@drawable/color_cursor_transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_location" />

        <TextView
            android:id="@+id/title_house_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_hose_number"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_location" />

        <EditText
            android:id="@+id/et_house_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/txt_enter_your_house_number"
            android:paddingBottom="@dimen/_18sdp"
            android:textCursorDrawable="@drawable/color_cursor_green"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_house_number" />

        <TextView
            android:id="@+id/title_landmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_landmark"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_house_number" />

        <EditText
            android:id="@+id/et_landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/txt_enter_your_landmark"
            android:paddingBottom="@dimen/_18sdp"
            android:textCursorDrawable="@drawable/color_cursor_green"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_landmark" />

        <TextView
            android:id="@+id/title_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_save_as"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_landmark" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_save"
            app:tabIndicatorColor="@color/color_blue"
            app:tabIndicatorFullWidth="false"
            app:tabInlineLabel="true">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_home_black_24dp"
                android:text="@string/title_home" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_black_work_24"
                android:text="@string/title_office" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_black_more_horiz_24"
                android:text="@string/txt_other" />
        </com.google.android.material.tabs.TabLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_red"
            android:text="@string/save_location"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>