<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.fooddelivery.ui.fragment.add_new_card.AddNewCardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_15sdp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_ver_70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_new_card"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/txt_card_number"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title" />

        <EditText
            onFocusChange="@{viewModel.onFocusChangeListener}"
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/txt_enter_card_number"
            android:inputType="number"
            android:maxLength="16"
            android:text="@={viewModel.cardNumber}"
            app:layout_constraintTop_toBottomOf="@id/title_card_number" />

        <TextView
            android:id="@+id/title_card_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/txt_card_info"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_card_number" />

        <EditText
            android:id="@+id/et_card_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:focusable="false"
            android:hint="@string/txt_date_valid"
            android:onClick="@{()->viewModel.openDialogDatePicker()}"
            android:text="@{viewModel.dateValid}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/gl_ver_70"
            app:layout_constraintTop_toBottomOf="@id/title_card_date" />

        <EditText
            android:id="@+id/et_card_cvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:hint="CVV"
            android:inputType="number"
            android:maxLength="3"
            android:text="@={viewModel.cvv}"
            app:layout_constraintLeft_toRightOf="@id/gl_ver_70"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_card_date" />

        <TextView
            android:id="@+id/title_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/txt_card_name"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_card_date" />

        <EditText
            android:id="@+id/et_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/txt_enter_card_name"
            android:inputType="text"
            android:text="@={viewModel.cardName}"
            app:layout_constraintTop_toBottomOf="@id/title_card_name" />

        <Button
            android:id="@+id/btn_make_payment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/light_gray_1"
            android:onClick="@{()->viewModel.confirm()}"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:text="@string/txt_apply"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_card_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>