<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myApplication="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.fooddelivery.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/txt_welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_to"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_18sdp"
            myApplication:layout_constraintBottom_toTopOf="@id/txt_app_name"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintTop_toBottomOf="@id/txt_welcome_to" />

        <TextView
            android:id="@+id/txt_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/title_login"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintTop_toBottomOf="@id/txt_app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:theme="@style/TextLabel"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintTop_toBottomOf="@id/txt_title_login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_id"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:theme="@style/TextLabel"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintTop_toBottomOf="@id/til_email"
            myApplication:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_forgot_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/_12sdp"
            myApplication:layout_constraintRight_toRightOf="parent"
            myApplication:layout_constraintTop_toBottomOf="@id/til_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorRed"
            android:gravity="center"
            android:onClick="@{()->viewModel.login()}"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sdp"
            myApplication:layout_constraintTop_toTopOf="@id/txt_forgot_pw" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@android:color/black"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintRight_toRightOf="parent"
            myApplication:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/txt_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/txt_continue_social_accounts"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintRight_toRightOf="parent"
            myApplication:layout_constraintTop_toBottomOf="@id/view_line" />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@color/colorBlue"
            android:text="@string/continue_with_facebook"
            android:textColor="@android:color/white"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintRight_toRightOf="parent"
            myApplication:layout_constraintTop_toBottomOf="@id/txt_continue" />

        <Button
            android:id="@+id/btn_mail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@color/colorRed1"
            android:text="@string/continue_with_facebook"
            android:textColor="@android:color/white"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintRight_toRightOf="parent"
            myApplication:layout_constraintTop_toBottomOf="@id/btn_facebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/txt_new_acc"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            myApplication:layout_constraintBottom_toBottomOf="parent"
            myApplication:layout_constraintLeft_toLeftOf="parent"
            myApplication:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>