<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.fooddelivery.ui.fragment.my_location.MyLocationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp">

        <TextView
            android:id="@+id/title_my_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_my_location"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_set_location"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_black_location_on_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_my_location" />

        <TextView
            android:id="@+id/title_set_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/set_delivery_location"
            android:textAllCaps="false"
            android:textColor="@color/color_red"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toRightOf="@id/img_set_location"
            app:layout_constraintTop_toBottomOf="@id/title_my_location" />

        <TextView
            android:id="@+id/content_set_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:onClick="@{()->viewModel.openSetLocation()}"
            android:text="@string/txt_search_arena"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintLeft_toRightOf="@id/img_set_location"
            app:layout_constraintTop_toBottomOf="@id/title_set_location" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/content_set_location" />

        <ImageView
            android:id="@+id/img_current_location"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_black_location_searching_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line" />

        <TextView
            android:id="@+id/title_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_current_location"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toRightOf="@id/img_set_location"
            app:layout_constraintTop_toBottomOf="@id/view_line" />

        <TextView
            android:id="@+id/content_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/txt_enable_location_service"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintLeft_toRightOf="@id/img_current_location"
            app:layout_constraintTop_toBottomOf="@id/title_current_location" />

        <View
            android:id="@+id/view_line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/content_current_location" />

        <TextView
            android:id="@+id/txt_save_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_saved_address"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line_1" />

        <ImageView
            android:id="@+id/img_work_location"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_work_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_save_address" />

        <TextView
            android:id="@+id/title_work_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txt_work"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toRightOf="@id/img_work_location"
            app:layout_constraintTop_toBottomOf="@id/txt_save_address" />

        <TextView
            android:id="@+id/content_work_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/set_delivery_location"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintLeft_toRightOf="@id/img_work_location"
            app:layout_constraintTop_toBottomOf="@id/title_work_location" />

        <View
            android:id="@+id/view_line_2"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_work_location" />

        <ImageView
            android:id="@+id/img_other_location"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_other_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line_2" />

        <TextView
            android:id="@+id/title_other_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/txt_other"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toRightOf="@id/img_other_location"
            app:layout_constraintTop_toBottomOf="@id/view_line_2" />

        <TextView
            android:id="@+id/content_other_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/set_delivery_location"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintLeft_toRightOf="@id/img_other_location"
            app:layout_constraintTop_toBottomOf="@id/title_other_location" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>